--- a/.env
+++ b/.env
@@ -34,13 +34,13 @@ REDIS_PORT=6379
 # 库位置
 REDIS_DB=5
 # 前缀
-REDIS_PREFIX=''
+REDIS_PREFIX=""
 # cache()的库位置
 REDIS_CACHE_DB=5
 # 连接名称
 REDIS_USERNAME=
 # cache()的前缀
-CACHE_PREFIX=''
+CACHE_PREFIX=""
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.qq.com
