--- a/.env
+++ b/.env
@@ -45,10 +45,10 @@ CACHE_PREFIX=""
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.qq.com
 MAIL_PORT=465
-MAIL_USERNAME=932046899@qq.com
-MAIL_PASSWORD=rypylcijmwksbehg
+MAIL_USERNAME=1131271533@qq.com
+MAIL_PASSWORD=zdoezsmoyguaghci
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="932046899@qq.com"
+MAIL_FROM_ADDRESS="1131271533@qq.com"
 # MAIL_FROM_NAME="${APP_NAME}"
 MAIL_FROM_NAME="神织恋"
 
