--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "babenkoivan/elastic-migrations": "^2.0",
+        "babenkoivan/elastic-scout-driver": "^2.0",
+        "elasticsearch/elasticsearch": "7.17.x",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "*",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^10.2",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
         "overtrue/laravel-lang": "~3.0",
@@ -64,7 +68,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
